--- a/index.html
+++ b/index.html
@@ -33,7 +33,29 @@
   <u>It's Ayush Singh.</u>
   <hr>
   <video src="Music1.mp4" Controls loop fullscreen width="100%">
+
   </video>
+<h1> HELLO FRIENDS </h1>
+<h2> IT'S DEEPAK </h2>
+<p> THIS WEB PAGE IS CREATED BY DEEPAK </p>
+<ul> Favourite Games </ul
+<li> Free Fire
+<li> Badminton
+<li> Cricket
+<table>
+<tr>
+<th> Name </th>
+<th> Class </th>
+</tr>
+<tr>
+<td> Deepak Kumar </td>
+<td> 8D </td>
+</tr>
+<tr>
+<td> Satyarth Kumar </td>
+<td> 8D </td>
+</tr>
+</table>
   <hr>
   <audio src="New Op.mp3" Controls loop unmuted preload="none">
     </audio>
