--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     It's Ayush Singh.
   </p>
   <hr>
-  <a href ="/Ayush@2.html">Click To Go On Ayu@2</a>
+  <a href ="Ayush@2.html">Click To Go On Ayu@2</a>
   <hr>
   <h1>It's Ayush Singh.</h1>
   <hr>
